--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "element-ui": "^2.3.8",
     "normalize.css": "^8.0.0",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-socket.io": "^2.1.1-b"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
