--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "axios": "^0.18.0",
     "element-ui": "^2.3.8",
     "normalize.css": "^8.0.0",
+    "qs": "^6.5.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vue-socket.io": "^2.1.1-b"
+    "vue-socket.io": "^2.1.1-b",
+    "vue-video-player": "^5.0.2",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
